Fix for bug 21682. BASE tag was ignored in the fragment content sink. Added HTML element creation method that takes an ID. r=pollmann